manifests/login-dsi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-api  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-api
  template:
    metadata:
      labels:
        app: login-api
    spec:
      containers:
      - name: login-api
        image: manoj1128/loginapi:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: login-api  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: login-api
